# pixel-logic

./: CMakeLists.txt  README.md
src/: main.c  main.cpp  pixel.h
src/globals/: globals.c  globals.h
src/pixel/: pixel.c  pixel.h
